err/nexiles.tools.api.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/nexiles'...
Listing './lib/python3.5/site-packages/nexiles/tools'...
Listing './lib/python3.5/site-packages/nexiles/tools/api'...
Compiling './lib/python3.5/site-packages/nexiles/tools/api/apps.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/apps.py", line 203
    print "Directory exists.  Use '--clobber' to overwrite."
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nexiles/tools/api/checkinout.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/checkinout.py", line 93
    print "current iteration: ", utils.object_pretty_print(doc)
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/content.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/content.py", line 168
    print "%d results" % len(results)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/defaults.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/defaults.py", line 100
    print "No default configuration found!"
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nexiles/tools/api/document.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/document.py", line 205
    print "created: ", utils.object_pretty_print(doc)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/main.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/main.py", line 48
    print args.surf
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/nexiles/tools/api/query.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/query.py", line 106
    print "%d results" % len(results)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/serve.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/serve.py", line 10
    print "serving at port", PORT
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/nexiles/tools/api/slumber'...
Listing './lib/python3.5/site-packages/nexiles/tools/api/tests'...
Compiling './lib/python3.5/site-packages/nexiles/tools/api/utils.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/utils.py", line 49
    except (slumber.exceptions.HttpServerError, slumber.exceptions.HttpClientError), e:
                                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/version.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/version.py", line 69
    print version.server_version()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nexiles/tools/api/zip.py'...
***   File "./lib/python3.5/site-packages/nexiles/tools/api/zip.py", line 28
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nexiles.tools.api-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/slumber'...
Listing './lib/python3.5/site-packages/slumber-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
